--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "express_server.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,17 @@
   },
   "homepage": "https://github.com/JeffreyLiu90/tinyapp#readme",
   "dependencies": {
+    "bcrypt": "2.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
     "nodemon": "^2.0.2"
   }
 }
